--- a/roles/k8s_master/defaults/main.yml
+++ b/roles/k8s_master/defaults/main.yml
@@ -23,7 +23,7 @@ k8s_master__kube_apiserver_audit_log_maxbackup: 3
 k8s_master__kube_apiserver_audit_log_maxsize: 100
 k8s_master__kube_apiserver_audit_log_path: '{{ k8s_master__audit_log_dir }}/kube-audit.log'
 k8s_master__kube_apiserver_bind_address: 0.0.0.0
-k8s_master__kube_apiserver_enable_admission_plugins: NodeRestriction,PodSecurityPolicy
+k8s_master__kube_apiserver_enable_admission_plugins: NodeRestriction,PodSecurityPolicy,DenyServiceExternalIPs
 k8s_master__kube_apiserver_etcd_compaction_interval: 5m0s
 k8s_master__kube_apiserver_etcd_servers:
   auto_set: true
