--- a/roles/k8s_node/defaults/main.yml
+++ b/roles/k8s_node/defaults/main.yml
@@ -52,6 +52,7 @@ k8s_node__containerd_registry_hosts:
   #   mirrors:
   #     http://my-registry.local:
   #       skip_verify: 'true'
+k8s_node__containerd_stream_server_port: 0
 k8s_node__containerd_version: 1.5.2
 k8s_node__containerd_archive_download_url_base: https://github.com/containerd/containerd/releases/download/v{{ k8s_node__containerd_version }}/containerd-{{ k8s_node__containerd_version }}-linux-amd64.tar.gz
 k8s_node__containerd_archive_checksum: sha1:70c7e2a910074ba8f6470c402f5cce6193aef899
