--- a/roles/k8s_node/defaults/main.yml
+++ b/roles/k8s_node/defaults/main.yml
@@ -19,6 +19,8 @@ k8s_node__kernel_params:
   value: 1
 - name: net.ipv4.ip_forward
   value: 1
+- name: net.netfilter.nf_conntrack_tcp_be_liberal
+  value: 1
 - name: fs.file-max
   value: 1050000
 - name: vm.max_map_count  # Elasticsearch
