--- a/roles/dev_env/defaults/main.yml
+++ b/roles/dev_env/defaults/main.yml
@@ -7,7 +7,7 @@ dev_env__kube_prompt_download_url: https://github.com/c-bata/kube-prompt/release
 dev_env__kube_prompt_checksum: sha1:bc486371ba54995055b60bb72f476f65fa87ac4d
 
 dev_env__helm_ver: v2.9.1
-dev_env__helm_download_url: https://storage.googleapis.com/kubernetes-helm/helm-{{ dev_env__helm_ver }}-linux-amd64.tar.gz
+dev_env__helm_download_url: https://get.helm.sh/helm-{{ dev_env__helm_ver }}-linux-amd64.tar.gz
 dev_env__helm_checksum: sha256:56ae2d5d08c68d6e7400d462d6ed10c929effac929fedce18d2636a9b4e166ba
 
 dev_env__stern_ver: 1.6.0
