--- a/roles/k8s_master/files/k8s_configs/audit-policy.conf
+++ b/roles/k8s_master/files/k8s_configs/audit-policy.conf
@@ -3,6 +3,7 @@ kind: Policy
 # Don't generate audit events for all requests in RequestReceived stage.
 omitStages:
   - "RequestReceived"
+omitManagedFields: true
 rules:
   # Log pod changes at RequestResponse level
   - level: RequestResponse
