--- a/roles/k8s_node/defaults/main.yml
+++ b/roles/k8s_node/defaults/main.yml
@@ -9,8 +9,7 @@ k8s_node__kernel_modules_to_load_for_ipvs:
 - ip_vs_rr
 - ip_vs_wrr
 - ip_vs_sh
-# use nf_conntrack instead of nf_conntrack_ipv4 for Linux kernel 4.19 and later
-- nf_conntrack_ipv4
+- "{{ ansible_kernel is version('4.19', '>=') | ternary('nf_conntrack', 'nf_conntrack_ipv4') }}"
 
 k8s_node__kernel_params:
 - name: net.bridge.bridge-nf-call-iptables
@@ -21,10 +20,15 @@ k8s_node__kernel_params:
   value: 1
 - name: net.netfilter.nf_conntrack_tcp_be_liberal
   value: 1
+- name: net.netfilter.nf_conntrack_max
+  value: 131072
+- name: net.netfilter.nf_conntrack_tcp_timeout_close_wait
+  value: 3600
 - name: fs.file-max
   value: 1050000
 - name: vm.max_map_count  # Elasticsearch
   value: 262144
+k8s_node__kernel_params_for_ipvs: "{{ _kparams_for_ipvs + (ansible_kernel is version('4.1', '>=') | ternary(_kparams_for_ipvs_4_1, [])) }}"
 
 k8s_node__yum_repos_to_disable: '{{ base__yum_repos_to_disable }}'
 k8s_node__yum_install_dependencies: true
