--- a/roles/k8s_master/defaults/main.yml
+++ b/roles/k8s_master/defaults/main.yml
@@ -69,3 +69,7 @@ k8s_master__kube_scheduler_tls_min_version: '{{ k8s_master__kube_apiserver_tls_m
 k8s_master__kube_scheduler_vlog_level: 2
 k8s_master__kube_scheduler_restart_sec: 10
 k8s_master__kube_scheduler_use_auto_generated_serving_cert: true
+
+k8s_master__helm_ver: v3.15.2
+k8s_master__helm_download_url: https://get.helm.sh/helm-{{ k8s_master__helm_ver }}-linux-amd64.tar.gz
+k8s_master__helm_checksum: sha256:2694b91c3e501cff57caf650e639604a274645f61af2ea4d601677b746b44fe2
