--- a/roles/k8s_master/tasks/main.yml
+++ b/roles/k8s_master/tasks/main.yml
@@ -15,3 +15,5 @@
 - import_tasks: tls_bootstrapping_configured.yml
   run_once: true
   tags: tls_bootstrapping
+- import_tasks: helm_installed.yml
+  tags: helm
