--- a/roles/coredns/defaults/main.yml
+++ b/roles/coredns/defaults/main.yml
@@ -1,6 +1,12 @@
-coredns__image: coredns/coredns:1.2.6
-coredns__replicas: 2
-coredns__maxUnavailable: 1
-coredns__manifests_dir: '{{ k8s_node__k8s_configs_dir }}/manifests'
-coredns__manifests_owner: root
-coredns__manifests_group: root
+coredns_chart_version: 1.31.0
+coredns_chart_download_url: https://github.com/coredns/helm/releases/download/coredns-{{ coredns_chart_version }}/coredns-{{ coredns_chart_version }}.tgz
+coredns_chart_checksum: sha256:a057fed7108dd3e355b5bebeafe2d8b621a20e31e353da1996185ae8595058ff
+
+coredns_chart_values:
+  image:
+    repository: coredns/coredns
+    tag: ""
+    pullPolicy: IfNotPresent
+  replica_count: 1
+
+coredns_namespace: kube-system
