--- a/roles/coredns/tasks/coredns_deployed.yml
+++ b/roles/coredns/tasks/coredns_deployed.yml
@@ -1,11 +1,3 @@
-- name: coredns manifests dir exists
-  file:
-    path: '{{ coredns__manifests_dir }}'
-    owner: '{{ coredns__manifests_owner }}'
-    group: '{{ coredns__manifests_group }}'
-    mode: 0755
-    state: directory
-
 - name: kube-apiserver is ready
   command: >-
     {{ k8s__k8s_bin_dir }}/kubectl get --raw='/readyz'
@@ -15,49 +7,23 @@
   delay: 5
   changed_when: false
 
-- name: CoreDNS-PSP manifest exists
-  copy:
-    src: coredns_psp.yml
-    dest: '{{ coredns__manifests_dir }}'
-    owner: '{{ coredns__manifests_owner }}'
-    group: '{{ coredns__manifests_group }}'
-    mode: 0644
-- name: CoreDNS-PSP is deployed
-  command: '{{ k8s__k8s_bin_dir }}/kubectl apply -f {{ coredns__manifests_dir }}/coredns_psp.yml'
-  register: _apply_result
-  changed_when: '" created" in _apply_result.stdout or " configured" in _apply_result.stdout'
-
-- name: CoreDNS-PSP Role manifest exists
-  copy:
-    src: coredns_psp_role.yml
-    dest: '{{ coredns__manifests_dir }}'
-    owner: '{{ coredns__manifests_owner }}'
-    group: '{{ coredns__manifests_group }}'
-    mode: 0644
-- name: CoreDNS-PSP Role is deployed
-  command: '{{ k8s__k8s_bin_dir }}/kubectl apply -f {{ coredns__manifests_dir }}/coredns_psp_role.yml'
-  register: _apply_result
-  changed_when: '" created" in _apply_result.stdout or " configured" in _apply_result.stdout'
-
-- name: CoreDNS-PSP/coredns RoleBinding manifest exists
-  copy:
-    src: coredns_psp_coredns_rolebinding.yml
-    dest: '{{ coredns__manifests_dir }}'
-    owner: '{{ coredns__manifests_owner }}'
-    group: '{{ coredns__manifests_group }}'
-    mode: 0644
-- name: CoreDNS-PSP/coredns RoleBinding is deployed
-  command: '{{ k8s__k8s_bin_dir }}/kubectl apply -f {{ coredns__manifests_dir }}/coredns_psp_coredns_rolebinding.yml'
-  register: _apply_result
-  changed_when: '" created" in _apply_result.stdout or " configured" in _apply_result.stdout'
-
-- name: CoreDNS manifest exists
+- name: CoreDNS chart is downloaded
+  get_url:
+    url: '{{ coredns_chart_download_url }}'
+    dest: '{{ k8s__remote_tmp_dir }}/coredns.tgz'
+    checksum: '{{ coredns_chart_checksum }}'
+- name: CoreDNS chart values.yml is rendered
   template:
-    src: coredns.yml.j2
-    dest: '{{ coredns__manifests_dir }}/coredns.yml'
-    owner: '{{ coredns__manifests_owner }}'
-    group: '{{ coredns__manifests_group }}'
-    mode: 0644
+    src: coredns_values.yml.j2
+    dest: '{{ k8s__remote_tmp_dir }}/coredns_values.yml'
+    owner: root
+    group: root
+    mode: 0600
 - name: CoreDNS is deployed
-  command: '{{ k8s__k8s_bin_dir }}/kubectl apply -f {{ coredns__manifests_dir }}/coredns.yml'
-  changed_when: '" created" in _apply_result.stdout or " configured" in _apply_result.stdout'
+  command: |
+    {{ k8s__helm_bin_dir }}/helm install
+    coredns
+    -f {{ k8s__remote_tmp_dir }}/coredns_values.yml
+    --version {{ coredns_chart_version }}
+    --namespace {{ coredns_namespace }}
+    {{ k8s__remote_tmp_dir }}/coredns.tgz
